--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,78 +1,233 @@
-
-nav {
-    background-color: #ffffff; 
-    padding: 0px;
+body {
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    font-size: 18px;
+    line-height: 34px;
+    color: #777777;
+    background: url("../images/concrete_seamless.png");
 }
-.head1 {
-    background: #4aaaa5;
-    width: 18%;
-    padding: 20px;
-    font-family: Georgia, Times, Times New Roman, serif;
-    color: #ffffff;
-    position: absolute;
-    right: 936px;
-    top: 16px;
-    
+  
+  * {
+    box-sizing: border-box;
 }
-ul {
-    list-style-type: none;
-    text-align: right;
-    margin: 0;
-    padding: 20px;
+  
+  /* general */
+  
+  .container {
+    width: 100%;
+    max-width: 960px;
+    margin: 0 auto;
+    clear: both;
 }
-li {
-    display: inline-block;
-    font-size: 15px;
-    padding: 20px;
-    font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
+  
+  h1,
+  h2,
+  h3,
+  p {
+    margin-bottom: 20px;
 }
-.line1 {
-    position: absolute;
-    bottom: 10px;
-
+  
+  p:last-child {
+    margin-bottom: 0;
 }
-main {
-    background-color: darkslategray;
-     padding: 300px;
-     height: 100%;
-     padding-bottom: 600px;
-     padding-left: 300px;
-     color: #ffffff; 
-     width:100%;
-}
-section {
-    background-color: #ffffff; 
-    width: 960px;
-    padding-top;
-    padding: 25px;
-    position: absolute;
-    left: 350px;
-    top: 300px;
-    margin-left: -30px;
-    margin-right: 50px;
-    height: 70%;
-}
-.head2 {
-    position: absolute;
-    right:800px;
-    top: 20px;
+  
+  h1,
+  h2,
+  h3 {
+    font-family: Georgia, Times, "Times New Roman", serif;
+    font-weight: 700;
     color: #4aaaa5;
 }
-img {
-    width: 175px;
+  
+  h1 {
+    padding-bottom: 20px;
+    font-size: 30px;
+    line-height: 49px;
+    border-bottom: 3px solid #dddddd;
 }
-p {
-    color: #777777;
+  
+  h2,
+  h3 {
+    font-size: 22px;
 }
-.section2 {
-    width: 200px;
+  
+  /* header */
+  
+  #masthead {
+    position: fixed;
+    z-index: 99;
+    width: 100%;
+    margin: 0 0 30px;
+    overflow: auto;
+    color: #ffffff;
+    background: #ffffff;
+    border-bottom: 2px solid #cccccc;
 }
-footer {
-    background-color: #666666;
+  
+  #logo {
+    float: left;
+    width: 250px;
+    height: 90px;
+    font-family: Georgia, Times, "Times New Roman", serif;
+    font-size: 30px;
+    font-weight: 700;
+    line-height: 90px;
+    color: #ffffff;
+    text-align: center;
+    text-decoration: none;
+    background: #4aaaa5;
+}
+  
+  nav {
+    float: right;
+    margin-top: 25px;
+}
+  
+  nav a {
+    display: inline-block;
+    padding-left: 15px;
+    margin-left: 15px;
+    line-height: 18px;
+    color: #999;
+    text-decoration: none;
+    border-left: 1px solid #efefef;
+}
+  
+  nav a:first-child {
+    border-left: 0 none;
+}
+  
+  /* footer */
+  
+  footer {
+    padding: 30px 0;
+    clear: both;
+    font-size: 12px;
+    color: #ffffff;
+    color: #cccccc;
+    text-align: center;
+    background: #666666;
     border-top: 8px solid #4aaaa5;
-    width:100%;
-    padding: 30px;
-    position: relative;
-    bottom: 20px;
+    height: 50px;
 }
+  
+  h3, h2 {
+    padding-bottom: 20px;
+    margin-bottom: 15px;
+    line-height: 22px;
+    border-bottom: 2px solid #eeeeee;
+}
+  
+  /* main */
+  
+  #main-container {
+    padding-top: 130px;
+    min-height: calc(100vh - 70px);
+}
+  
+  .main-section {
+    float: left;
+    width: 100%;
+    max-width: 960px;
+    padding: 30px;
+    margin: 0 0 40px;
+    background: #ffffff;
+    border: 1px solid #dddddd;
+}
+  
+  /* portfolio page */
+  
+  .work {
+    position: relative;
+    float: left;
+    width: 274px;
+    margin: 20px 0 25px;
+    overflow: auto;
+}
+  
+  .work:nth-child(even) {
+    margin-right: 40px;
+}
+  
+  .work img {
+    width: 100%;
+    border: 0 none;
+    opacity: 0.8;
+}
+  
+  .work h3 {
+    position: absolute;
+    bottom: 20px;
+    width: 100%;
+    padding: 15px;
+    margin-bottom: 0;
+    font-weight: 300;
+    line-height: 30px;
+    color: #ffffff;
+    text-align: center;
+    background: #4aaaa5;
+    border-bottom: 0;
+}
+  
+  .auth-image {
+    float: left;
+    width: 200px;
+    height: auto;
+    margin-top: 10px;
+    margin-right: 25px;
+}
+  
+  /* contact page */
+  
+  #contact-form ul {
+    margin-bottom: 20px;
+}
+  
+  #contact-form li {
+    margin-bottom: 10px;
+}
+  
+  label,
+  input[type=text],
+  input[type=email],
+  textarea {
+    display: block;
+    width: 100%;
+}
+  
+  input[type=text],
+  input[type=email],
+  textarea {
+    height: 35px;
+    padding: 0 10px;
+    font-size: 14px;
+    border: 1px solid #dddddd;
+}
+  
+textarea {
+ height: 200px;
+}
+  
+input[type=submit] {
+    padding: 10px 30px;
+    font-size: 18px;
+    color: #ffffff;
+    cursor: pointer;
+    background: #4aaaa5;
+    border: 0 none;
+}
+}
+@media only screen and (max-width: 640px) {
+    nav {
+        position: static;
+    }
+}
+@media only screen and (max-width: 768px) {
+    body {
 
+    }
+}
+@media only screen and (max-width: 980px) {
+    body {
+
+    }
+}
